--- a/swingtime/templates/swingtime/yearly_view.html
+++ b/swingtime/templates/swingtime/yearly_view.html
@@ -30,8 +30,8 @@
             <thead class="bg-blue-100 py-2">
             <tr class="text-center">
                 <th>Month</th>
-                <th>Title</th>
-                <th>Day</th>
+                <th>Event Title</th>
+                <th>Event Occurrence</th>
                 <th>Start</th>
                 <th>End</th>
             </tr>
