fix event update

--- a/swingtime/templates/swingtime/event_detail.html
+++ b/swingtime/templates/swingtime/event_detail.html
@@ -15,7 +15,7 @@
                 {{ event_form.as_table }}
             </table>
             <div class="h-4"></div>
-            <input type="submit" name="_save" value="Update Details"
+            <input type="submit" name="_update" value="Update Details"
                    class="swing-button swing-button-primary"/>
         </div>
         <div class="my-2 border rounded bg-gray-50 p-4">
