--- a/swingtime/templates/swingtime/occurrence_detail.html
+++ b/swingtime/templates/swingtime/occurrence_detail.html
@@ -46,7 +46,7 @@
             <input type="submit"
                    name="_delete"
                    class="swing-button-danger swing-button"
-                   value="Remove Occurrence"/>
+                   value="Remove this occurrence"/>
         </div>
 
     </form>
