--- a/swingtime/templates/swingtime/include/cal_grid.html
+++ b/swingtime/templates/swingtime/include/cal_grid.html
@@ -10,7 +10,7 @@
                     <div class="text-center font-bold m-1">
                         <a title="see day detail"
                            class="inline-block border w-full bg-gray-300 hover:bg-gray-400"
-                           href="{% url 'swingtime-daily-view' group.id this_month.year this_month.month day %}">
+                           href="{% url 'swingtime-day' group.id this_month.year this_month.month day %}">
                             {{ day }}
                         </a>
                     </div>
