--- a/swingtime/templates/swingtime/monthly_view.html
+++ b/swingtime/templates/swingtime/monthly_view.html
@@ -10,7 +10,7 @@
         {% include "swingtime/include/menu_scope.html" %}
 
         <a class="swing-button"
-           href="{% url 'swingtime-monthly-view' group.id last_month.year last_month.month %}"
+           href="{% url 'swingtime-month' group.id last_month.year last_month.month %}"
            title="Previous Month">&larr; {{ last_month|date:"m/Y" }}</a>
 
         <div class="inline-block px-2 rounded">
@@ -22,7 +22,7 @@
         </div>
 
         <a class="swing-button"
-           href="{% url 'swingtime-monthly-view' group.id next_month.year next_month.month %}"
+           href="{% url 'swingtime-month' group.id next_month.year next_month.month %}"
            title="Next Month">{{ next_month|date:"m/Y" }} &rarr;</a>
     </div>
 
