--- a/jivetime/templates/jivetime/monthly_view.html
+++ b/jivetime/templates/jivetime/monthly_view.html
@@ -7,10 +7,10 @@
 
     <div class="text-center">
 
-        {% include "swingtime/include/menu_scope.html" %}
+        {% include "jivetime/include/menu_scope.html" %}
 
         <a class="swing-button"
-           href="{% url 'swingtime-month' group.id last_month.year last_month.month %}"
+           href="{% url 'jivetime-month' group.id last_month.year last_month.month %}"
            title="Previous Month">&larr; {{ last_month|date:"m/Y" }}</a>
 
         <div class="inline-block px-2 rounded">
@@ -22,11 +22,11 @@
         </div>
 
         <a class="swing-button"
-           href="{% url 'swingtime-month' group.id next_month.year next_month.month %}"
+           href="{% url 'jivetime-month' group.id next_month.year next_month.month %}"
            title="Next Month">{{ next_month|date:"m/Y" }} &rarr;</a>
     </div>
 
-    {% include "swingtime/include/cal_grid.html" %}
+    {% include "jivetime/include/cal_grid.html" %}
 
 
 {% endblock %}
