--- a/jivetime/templates/jivetime/include/cal_grid.html
+++ b/jivetime/templates/jivetime/include/cal_grid.html
@@ -1,6 +1,6 @@
 <div class="w-full grid grid-cols-7">
     {% for week_day in week_days %}
-        <div class="swing-accent font-bold text-center">{{ week_day }}</div>
+        <div class="jive-accent font-bold text-center">{{ week_day }}</div>
     {% endfor %}
 
     {% for row in calendar_data %}
