--- a/jivetime/templates/jivetime/include/cal_table.html
+++ b/jivetime/templates/jivetime/include/cal_table.html
@@ -1,6 +1,6 @@
 <table class="w-full text-center">
     <thead>
-    <tr class="swing-accent">
+    <tr class="jive-accent">
         {% for week_day in week_days %}
             <th style="width: 14.3%">{{ week_day }}</th>
         {% endfor %}
