--- a/jivetime/templates/jivetime/occurrence_detail.html
+++ b/jivetime/templates/jivetime/occurrence_detail.html
@@ -15,7 +15,7 @@
             Event
         </div>
         <a href="{{ occurrence.event.get_absolute_url }}"
-           class="swing-button">
+           class="jive-btn">
             {{ occurrence.title }}
         </a>
 
@@ -40,12 +40,12 @@
 
             <input type="submit"
                    name="_update"
-                   class="swing-button-primary swing-button"
+                   class="jive-btn-primary jive-btn"
                    value="Update Time"/>
 
             <input type="submit"
                    name="_delete"
-                   class="swing-button-danger swing-button"
+                   class="jive-btn-danger jive-btn"
                    value="Remove this occurrence"/>
         </div>
 
