--- a/jivetime/templates/jivetime/add_event.html
+++ b/jivetime/templates/jivetime/add_event.html
@@ -2,7 +2,7 @@
 {% block title %}Add Event{% endblock %}
 
 {% block content %}
-    <h3 class="swing-title">Add Event</h3>
+    <h3 class="jive-title">Add Event</h3>
 
     {{ event_form.non_field_errors }}
     {{ recurring_form.non_field_errors }}
@@ -17,7 +17,7 @@
             {% include "jivetime/recurring_form_part.html" %}
         </table>
 
-        <input class="swing-button swing-button-primary" type="submit" value="Add Event"/>
+        <input class="jive-btn jive-btn-primary" type="submit" value="Add Event"/>
     </form>
 
 {% endblock %}
